www/_css/sitenew.css
/* TAGS */

body{
  margin:0px;
	font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 12px;
  background: #fff;
}

header{
	position: fixed;
  top: 0;
  left: 0;
	width: 100%;
	height: 60px;
	background-color: #222;
  z-index: 1000;
}

a{
  color: #999;
  text-decoration: none;
}
a:hover{
  color: #09f;
}
a:visited{
  color: #999;
}
a:active{
  color: #fff;
}
a.hidden:hover{
  color:#fff;
}

h1{
  font-size: 18px;
  margin: 10px;
}

footer{
  float: left;
  clear: both;
  width: 100%;
  height: 30px;
  background-color: #666;
  color: #fff;
  font-family: 'DINMediumRegular', Helvetica, Arial, sans-serif;
  font-size: 10px;
  /*margin-top: 0.25%;*/
}

/* CLASS */

.item{
  float: left;
  /*width: 99.5%;*/
  /*margin: 0.25%;*/
  width: 100%;
  margin: 0.25% 0px 0.25% 0px;
  height: 250px;
  color: #fff;
}

.item:hover{
  color: #fff;
}

.item:visited{
  color: #fff;
}

.item:hover .itemimg{
  opacity: 0.8;
}

.item:hover .itemtext{
  background-color: rgba(0,150,255,0.6);
}

.item:hover .title{
  opacity: 1;
}

.item:hover .date{
  opacity: 1;
}

.item:hover .description{
  opacity: 1;
}

.itemtext{
  position: relative;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.5);/*rgba(50, 50, 50, 0.2);*/
  -webkit-transition: background 300ms;
  -moz-transition: background 300ms;
  -ms-transition: background 300ms;
  -o-transition: background 300ms;
  transition: background 300ms;
}

.itemimg{
  position: absolute;
	top: 0;
	left: 0;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	width: 100%;
	height: 100%;
  z-index: -1;
	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
  filter: gray;
  -webkit-filter: grayscale(1);
  -webkit-transition: -webkit-filter 300ms linear, opacity 300ms;
  opacity: 0.1;
}

.title{
  font-family: 'DINMediumRegular', Helvetica, Arial, sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.1em;
  padding: 10px;
  opacity: 1;
  -webkit-transition: opacity 300ms;
  -moz-transition: opacity 300ms;
  -ms-transition: opacity 300ms;
  -o-transition: opacity 300ms;
  transition: opacity 300ms;
}

.date{
  text-transform: uppercase;
  font-family: 'DINMediumRegular', Helvetica, Arial, sans-serif;
  font-size: 10px;
  padding: 0px 10px 0px 10px;
  opacity: 1;
  -webkit-transition: opacity 300ms;
  -moz-transition: opacity 300ms;
  -ms-transition: opacity 300ms;
  -o-transition: opacity 300ms;
  transition: opacity 300ms;
}

.description{
  height: auto;
  margin: 10px;
  opacity: 1;
  overflow: hidden;
  -webkit-transition: opacity 300ms;
  -moz-transition: opacity 300ms;
  -ms-transition: opacity 300ms;
  -o-transition: opacity 300ms;
  transition: opacity 300ms;
}

.btn-navbar{
  float: right;
  width: 17px;
  height: 18px;
  margin: 16px 10px 16px 0px;
  padding: 0;
  border: 0;
  background: transparent;
}

.btn-navbar:hover .icon-bar{
  background-color: #fff;
}

.icon-bar{
  display: block;
  width: 100%;
  height: 2px;
  margin: 4px 0px 4px 0px;
  background-color: #666;
}

.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
}

.slide{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-bottom: 41.84%;
  background-size: contain;
  background-repeat: no-repeat;
  opacity: 0;
}

.taglink{
  color: #666;
}
.taglink:active{
  color: #0099ff;
}

.projectvideo{
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.videoframe{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* IDS */

#logo{
	width: 220px;
	height: 26px;
	margin: 5px 10px 10px 10px;
	float: left;
	color: #fff;
	font-family: 'BauhausRegular';
	font-size: 36px;
}
#logo a{
  color: #fff;
}
#logo a:visited{
  color: #fff;
}

#sublogo{
	clear: left;
	color: #666666;
	margin: 10px;
  text-transform: uppercase;
  font-family: 'DINMediumRegular', Helvetica, Arial, sans-serif;
	font-size: 10px;
}

#sublogo a{
  color: #666;
}

#splash{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: #fff;
  z-index: -1000;
}

#splashtext{
  position: absolute;
  top: 50vh;
  left: 0;
  width: 100%;
  height: 25vh;
  margin: 0px;
  font-family: 'DINMediumRegular', Helvetica, Arial, sans-serif;
	font-size: 24px;
  font-weight: 700;
  line-height: 1.1em;
  color: #fff;
  opacity: 0;
  animation-name: fadeInAnimation;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

#splashtext p{
  margin: 0px 0px 0px 10px;
}

#slideshow{
  float: left;
  position: relative;
  top: 0px;
  width: 100%;
  padding-bottom: 41.84%;
  margin: 0px;
  background-color: #fff;
}

#downarrow{
  position: absolute;
  bottom: 0px;
  left: 50%;
  width: 20px;
  font-size: 24px;
  font-weight: 700;
  color: rgba(255,255,255,0.5);
  animation-name: fadeInAnimation;
  animation-duration: 2s;
}

#container{
  position: relative;
  width: 100%;
  padding-top: 0.25%;
  top: 100vh;
  background-color: #fff !important;
  display: inline-block;
  z-index: -1;
}

#content{
  position: relative;
  margin: 0 auto 0 auto;
  width: 100%;
  max-width: 1280px;
  background-color: #fff !important;
}

#projecttitle{
  float: left;
  font-family: 'DINMediumRegular', Helvetica, Arial, sans-serif;
  font-weight: 700;
  font-size: 16px;
  width: 100%;
  margin-top: 20px;
}

#projectdeets{
  float: left;
  width: 100%;
  margin-bottom: 20px;
}

#projectdate{
  float: left;
  text-transform: uppercase;
  font-family: 'DINMediumRegular', Helvetica, Arial, sans-serif;
  font-size: 10px;
  margin: 0 0 10px 10px;
}

#projecttags{
  float: left;
  text-transform: uppercase;
  font-family: 'DINLightRegular', Helvetica, Arial, sans-serif;
  font-size: 10px;
  margin: 0 10px 10px 10px;
}

#projectlink{
  font-family: 'DINMediumRegular', Helvetica, Arial, sans-serif;
  font-weight: 700;
  font-size: 10px;
  float: left;
  clear: both;
  color: #fff;
  margin-left: 10px;
  padding: 10px;
  background-color: #09f;
  text-transform: uppercase;
  font-weight: 700;
}

#projectlink:hover{
  background-color: #0af;
}

#projectbody{
  float: left;
  margin: 10px 10px 0 10px;
  padding: 0 0 20px 0;
}

.projectbodytext{
  margin: 0 0 20px 0;
  width: 100%;
}

#copyright{
  margin: 10px;
  float: left;
}

#praetorians{
  margin: 10px;
  float: right;
}


/* CONTACT PAGE STYLES */

#contactleft{

}
#contactright{
  margin-bottom: 20px;
}
label{
  display: block;
}
input{
  width: 100%;
}
textarea{
  width: 100%;
}

/* ANIMATIONS */

@keyframes fadeInAnimation{
  from {opacity: 0;}
  to {opacity: 1;}
}




#menu{
	display: none;
	position: fixed;
	top: 60px;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1000;

}





/* SUBMENU TITLES */

#menutitles {
	float: left;
	clear: both;
	width: 100%;
	height: 31px;
	background-color: #333;
	border-bottom: 1px #222 solid;
}
.menutitle{
	float: left;
	display: block;
	width: 50%;
	color: #fff;
	background-color:#333;
	font-size: 10px;
	font-weight: 700;
	text-transform: uppercase;
}
.menutitletext{
	float: left;
	margin: 10px 0 10px 10px;
}
#tweetmenutitle{
	display: none;
}
#tagmenutitle{
	display: none;
}





/* SUB MENU GENERIC CLASSES */

.submenu{
	float: left;
	display: block;
  width: 50%;
	height: 100%;
	background-color:#222;
	overflow: scroll;
}
.submenu::-webkit-scrollbar {
  width: 0px;
}
.submenu a{
	text-decoration: none;
	border: none;
}
.submenuitemholder{
  float: left;
  width: 100%;
  margin-left: -1px;
}
.submenuitem{
	float: left;
	width: 100%;
	height: 50px;
	line-height: 50px;
	border-bottom: 1px #333 solid;
	vertical-align:middle;
}
.submenuitem:hover{
	cursor:pointer;
	background-color: #333;
}
.submenuitem:hover .submenutext{
	color:#fff;
}
.submenutext{
	display: inline-block;
  vertical-align: middle;
	font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
	font-size: 10px;
  line-height: 11px;
	font-weight: 500;
	color: #ccc;
	text-decoration: none;
	margin: 10px;
	max-height: 34px;
	overflow: hidden;
}
.submenubottom{
	float: left;
  width: 100%;
	height: 82px;
}





/* SUB MENU MODIFIERS */

.tagmenuitem{
	height: 51px;
	line-height: 51px;
	border-bottom: none;
}
.tagmenutext{
	font-family: 'DINLightRegular', Helvetica, Arial, sans-serif;
	font-size: 18px;
	line-height: 18px;
	font-weight: 100;
	color: #fff;
	text-transform: uppercase;
	white-space: nowrap;
}
.tagnum {
	color: #666;
}
#tweetmenu{
	display: none;
}
#tagmenu{
	display: none;
}
.mainmenuitem{
	height: 51px;
	line-height: 51px;
	border-bottom: none;
}
.mainmenutext{
	font-family: 'DINMediumRegular', Helvetica, Arial, sans-serif;
	font-size: 30px;
	line-height: 31px;
	font-weight: 700;
	color: #fff;
	text-transform: uppercase;
}










hr {
	border-width: 0px;
	background-color: #333;
	height: 1px;
	margin: 0px;
}

.vr{
  float: left;
  width: 1px;
  height: 100%;
  background-color: #333;
}

.vr2{
  background-color: #222;
  height: 32px;
}





/* MEDIA QUERY BREAKPOINTS */

@media only screen and (min-width: 360px){
  body{
    font-size: 12px;
  }
  h1{
    font-size: 22px;
  }
  .title{
    font-size: 18px;
  }
  #splashtext{
  	font-size: 28px;
  }
}

@media only screen and (min-width: 480px){
  /*
  body{
    font-size: 14px;
  }
  h1{
    font-size: 26px;
  }
  .title{
    font-size: 20px;
  }
  */
  .item{
    width: 49.5%;
    margin: 0.25%;
    padding: 0px;
  }
  #splashtext{
  	font-size: 32px;
  }
  #projectdate{
    font-size: 14px;
    margin: 0 0 10px 10px;
  }
  #projecttags{
    font-size: 14px;
    margin: 0 10px 10px 10px;
  }
  #projectlink{
    font-size: 14px;
  }

  /* menu titles */
	.menutitle{
		width: 33.33%;
	}
	#tagmenutitle{
		display: block;
	}

	/* menus */
	.submenu{
		width: 33.33%;
	}
	#tagmenu{
		display: block;
	}
}

@media only screen and (min-width: 640px) {		/* two */
  body{
    font-size: 12px;
  }
  h1{
    font-size: 30px;
  }
  .title{
    font-size: 18px;
  }
  #splashtext{
  	font-size: 38px;
  }
  .projectbodytext{
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
  #contactleft{
    float: left;
    width: 49%;
    margin-right: 2%;
  }
  #contactright{
    float: left;
    width: 49%;
  }
}

@media only screen and (min-width: 720px) {		/* three */
  body{
    font-size: 12px;
  }
  h1{
    font-size: 38px;
  }
  .title{
    font-size: 18px;
  }
  .item{
    width: 33%;
    margin: 0.16666666666%;
    padding: 0px;
  }
  #splashtext{
  	font-size: 50px;
  }
  .projectbodytext{
    -webkit-column-count: 3;
    -moz-column-count: 3;
    column-count: 3;
  }
  /* menus */
	.mainmenutext{
		font-size: 36px;
		line-height: 36px;
	}
	.tagmenutext{
		font-size: 24px;
		line-height: 24px;
	}

  #contactleft{
    float: left;
    width: 29%;
    margin-right: 2%;
  }
  #contactright{
    float: left;
    width: 69%;
  }
}

@media only screen and (min-width: 960px) {

	/* menu titles */
	.menutitle{
		width: 25%;
	}
	#tweetmenutitle{
		display: block;
	}

	/* menus */
	.submenu{
		width: 25%;
	}
	#tweetmenu{
		width: 25%;
		display: block;
	}
}

@media only screen and (min-width: 1080px){
  body{
    font-size: 14px;
  }
  .title{
    font-size: 20px;
  }
  #splashtext{
  	font-size: 64px;
  }

  /* menus */
	.submenuitem {
		height: 60px;
		line-height: 60px;
	}
	.submenutext {
		font-size: 14px;
		line-height: 16px;
		max-height: 34px;
	}
	.mainmenuitem{
		height: 61px;
		line-height: 61px;
	}
	.mainmenutext{
		max-height: 50px;
		font-size: 42px;
		line-height: 42px;
	}
	.tagmenuitem{
		height: 61px;
	}
	.tagmenutext{
		max-height: 50px;
		font-size: 24px;
		line-height: 24px;
	}
}

